syntax = "proto3";

package sbot.proto.model;

option csharp_namespace = "SBot.Proto.Model";
option go_package = "github.com/sbot/proto/model";
option java_multiple_files = true;
option java_outer_classname = "AttackSource";
option java_package = "com.gbw3bao.sbot.proto.model";
option php_namespace = "SBot\\Proto\\Model";

message AddAttackSourceRequest {

  string name = 1;

  repeated string types =2;

  uint64 contentLen = 3;

  bytes content = 4;

}